--- a/csv-uploader.html
+++ b/csv-uploader.html
@@ -420,7 +420,7 @@
     </div>
     
     <div id="proxyPreviewContainer" class="hidden" style="margin-top: 15px;">
-      <h4>Proxy Preview (First 5 entries)</h4>
+      <h4>Proxy Preview</h4>
       <div class="preview-container">
         <table id="proxyPreviewTable" class="preview-table">
           <!-- Preview content will be inserted here -->
@@ -435,6 +435,11 @@
         <input type="number" id="proxyChangeRows" min="1" value="5" style="flex: 1; padding: 8px; border-radius: 4px; border: 1px solid #ccc;">
         <span style="margin-left: 8px;">rows</span>
       </div>
+    </div>
+
+    <div id="blockedProxiesContainer" class="hidden" style="margin-top: 15px;">
+      <h4>Blocked Proxies This Session</h4>
+      <textarea id="blockedProxiesList" rows="4" readonly style="width: 100%; font-size: 12px; background-color: #f1f1f1; border: 1px solid #ddd; border-radius: 4px; padding: 5px;"></textarea>
     </div>
   </div>
 </div>
@@ -480,6 +485,9 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon" style="margin-right: 0; margin-left: 6px;">
         <polygon points="5 3 19 12 5 21 5 3"></polygon>
       </svg>
+    </button>
+    <button id="skipProxyButton" class="btn-secondary" style="display: none; background-color: #ff9800; color: white;">
+      Skip to Next Proxy
     </button>
     <button id="exportButton" class="btn-primary" style="display: none;">
       Export Results
