--- a/popup.html
+++ b/popup.html
@@ -189,6 +189,10 @@
       </svg>
       Export Processed CSV
     </button>
+    <button id="disconnect-proxy-btn" style="background-color: #ffc107; color: black; grid-column: span 2;">
+      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18.36 6.64a9 9 0 1 1-12.73 0"></path><line x1="12" y1="2" x2="12" y2="12"></line></svg>
+      Disconnect Proxy
+    </button>
   </div>
   
   <div id="status"></div>
